--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
+        vectorDrawables.useSupportLibrary = true
         applicationId "com.thebaileybrew.favoriteathletestattracker"
         minSdkVersion 21
         targetSdkVersion 27
@@ -23,23 +24,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'it.sephiroth.android.library.bottomnavigation:bottom-navigation:2.0.1-rc1'
     implementation 'com.xw.repo:bubbleseekbar:3.17'
-    implementation 'com.mikepenz:iconics-core:3.0.3@aar'
-    implementation 'com.mikepenz:iconics-views:3.0.3@aar'
-    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
-    implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.4@aar'
-    implementation 'com.mikepenz:fontawesome-typeface:5.0.6.0@aar'
-    implementation 'com.mikepenz:octicons-typeface:3.2.0.4@aar'
-    implementation 'com.mikepenz:meteocons-typeface:1.1.0.4@aar'
-    implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
-    implementation 'com.mikepenz:weather-icons-typeface:2.0.10.4@aar'
-    implementation 'com.mikepenz:typeicons-typeface:2.0.7.4@aar'
-    implementation 'com.mikepenz:entypo-typeface:1.0.0.4@aar'
-    implementation 'com.mikepenz:devicon-typeface:2.0.0.4@aar'
-    implementation 'com.mikepenz:foundation-icons-typeface:3.0.0.4@aar'
-    implementation 'com.mikepenz:ionicons-typeface:2.0.1.4@aar'
-    implementation 'com.mikepenz:pixeden-7-stroke-typeface:1.2.0.2@aar'
+    implementation 'com.stone.vega.library:VegaLayoutManager:1.0.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
